--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,8 +12,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #261818;
-  background-color: #f2eee9;
+  color: theme("colors.light");
+  background-color: theme("colors.dark");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
