--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,10 @@
   color-scheme: light dark;
   color: theme("colors.light");
   background-color: theme("colors.dark");
+  background-image: url("/images/bkg-01.png");
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
