Added endpoint and service for getting user by id and updated dto to include more properties. Added endpoints and services for adding a category and adding a friend to a category. This was done for testing purposes.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,11 +14,11 @@
   color-scheme: light dark;
   color: theme("colors.light");
   background-color: theme("colors.dark");
-  background-image: url("/images/bkg-01.png");
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-
+  @media (min-width: 1024px) {
+    background-image: url("/images/bkg-01.png");
+    background-size: cover;
+    background-position: top;
+  }
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
